fixing responsive on mobile, materials and ubications on 3D render

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 html,
 body {
@@ -68,7 +68,7 @@ svg {
 .page {
   z-index: 99999;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
